--- a/proticket-server/package.json
+++ b/proticket-server/package.json
@@ -3,18 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "cors": "^2.8.5",
-    "express": "^4.21.0",
-    "nodemon": "^3.1.7",
-    "pg": "^8.13.0"
-  },
-  "devDependencies": {},
-  "description": ""
+    "pg": "^8.5.1"
+  }
 }
